--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,12 +1,17 @@
 <h3>Cart</h3>
 
+<p>
+	<a routerLink="/shipping">Shipping Prices</a>
+</p>
+
+
 <div class="cart-item" *ngFor="let item of items">
-  <span>{{item.name}}</span>
-  <span>{{item.price | currency}}</span>
+	<span>{{item.name}}</span>
+	<span>{{item.price | currency}}</span>
 
 </div>
 <div class="cart-item">
-  <span>Subtotal</span>
-  <span>{{subtotal | currency}}</span>
+	<span>Subtotal</span>
+	<span>{{subtotal | currency}}</span>
 
 </div>
